[package]
name = "aoc_2024"
version = "1.0.0"
edition = "2021"
authors = ["LockBlock-dev"]

[[bin]]
name = "day1"
path = "src/day1.rs"

[[bin]]
name = "day2"
path = "src/day2.rs"

[[bin]]
name = "day3"
path = "src/day3.rs"

[dependencies]
regex = "1.11.1"
util = { version = "0.1.0", path = "util" }
