[package]
name = "aoc_2024"
version = "1.0.0"
edition = "2021"
authors = ["LockBlock-dev"]

[[bin]]
name = "day1"
path = "src/day1.rs"

[[bin]]
name = "day2"
path = "src/day2.rs"

[[bin]]
name = "day3"
path = "src/day3.rs"

[[bin]]
name = "day4"
path = "src/day4.rs"

[[bin]]
name = "day5"
path = "src/day5.rs"

[dependencies]
ndarray = "0.16.1"
regex = "1.11.1"
util = { version = "0.1.0", path = "util" }
